@@ -26,6 +26,7 @@ FILE_CSV = _resolve_file('./files/test_io/input-valid.csv')
 FILE_EXCEL = _resolve_file('./files/test_io/input-valid.xlsx')
 FILE_JSON = _resolve_file('./files/test_io/input-valid.json')
 FILE_JSON_OBJECTS = _resolve_file('./files/test_io/input-valid-objects.json')
+FILE_JSON_NESTED = _resolve_file('./files/test_io/input-valid-nested.json')
 FILE_MULTILINE = _resolve_file('./files/test_io/input-multiline.csv')
 FILE_FUZZY = _resolve_file('./files/test_io/input-fuzzy.csv')
 FILE_INVALID = _resolve_file('./files/test_io/input-invalid.csv')
@@ -162,6 +163,11 @@ class TestParser(unittest.TestCase):
     def test_local_json_objects(self):
         """Test reading from a local JSON file."""
         with hxl.data(FILE_JSON_OBJECTS, True) as source:
+            self.compare_input(source)
+
+    def test_local_json_nested(self):
+        """Test reading from a local JSON file."""
+        with hxl.data(FILE_JSON_NESTED, True) as source:
             self.compare_input(source)
 
     def test_remote_csv(self):
